generateExampleEnvFile copy .env file